# chrome-debloat

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: check.yml  release.yml
scripts/: _headers  install.ps1  install.sh
src/: app.rs  browser.rs  diff.rs  editor.rs  history.rs  macos.rs  main.rs  manifest.rs  manifest.yaml  opener.rs  policy_tree.rs  watcher.rs  windows.rs
src/chromium/: mod.rs  types.rs
src/chromium/detection/: errors.rs  install.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/chromium/policy/: errors.rs  json.rs  linux.rs  macos.rs  mod.rs  policy.rs  reader.rs  unsupported.rs  windows.rs  writer.rs
src/tui/: action.rs  event.rs  mod.rs  styles.rs  term.rs  ui.rs  ui_apply.rs  ui_content.rs  ui_dialog.rs  ui_elevation.rs  ui_export.rs  ui_filter.rs  ui_footer.rs  ui_header.rs  ui_help.rs  ui_quit.rs  ui_revert.rs  ui_sudo.rs  ui_summary.rs  ui_text.rs  ui_uninstall.rs
