[package]
name = "chrome-debloat"
version = "0.1.6-alpha.1"
edition = "2024"
repository = "https://github.com/NVFP4/chrome-debloat"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
flate2 = "1.1.9"
indexmap = { version = "2.14.0", features = ["serde"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
serde_json = "1.0.149"

[target.'cfg(target_os = "macos")'.dependencies]
notify = "8.2.0"
plist = "1.9.0"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.1"
windows-registry = "0.6.1"

[build-dependencies]
flate2 = "1.1.9"

[profile.release]
strip = true
debug = false
lto = "fat"
opt-level = 2
overflow-checks = true
